// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildAudioGraph > clips without music 1`] = `
{
  "filterComplex": "[0:a:0]asetpts=PTS-STARTPTS,aresample=48000,aformat=sample_fmts=fltp:channel_layouts=stereo,atrim=duration=6,volume=4dB,afade=t=in:d=0.01:curve=qsin,afade=t=out:st=5.5:d=0.5:curve=qsin,adelay=0S:all=1[a0];
[1:a:0]asetpts=PTS-STARTPTS,channelmap=0|1|2|3,aresample=48000,aformat=sample_fmts=fltp:channel_layouts=stereo,atrim=duration=8,volume=-6dB,afade=t=in:d=0.01:curve=qsin,afade=t=out:st=7.5:d=0.5:curve=qsin,adelay=0S:all=1[a1];
[2:a:0]asetpts=PTS-STARTPTS,aresample=48000,aformat=sample_fmts=fltp:channel_layouts=stereo,atrim=duration=6,volume=11dB,afade=t=in:d=0.5:curve=qsin,afade=t=out:st=5.99:d=0.01:curve=qsin,adelay=264000S:all=1[a2];
[a0][a1][a2]amix=inputs=3:normalize=0:duration=longest,volume='0.707107+0.292893*clip((t-7.5)/0.5,0,1)':eval=frame,apad=whole_dur=11.5[clips];
[clips]atrim=duration=11.5,alimiter=limit=0.891251:level=disabled:latency=1,aformat=sample_fmts=fltp:sample_rates=48000:channel_layouts=stereo[aout]",
  "inputs": [
    [
      "-vn",
      "-ss",
      "1.000000",
      "-t",
      "6.100000",
      "-i",
      "/media/h.mp4",
    ],
    [
      "-vn",
      "-ss",
      "2.000000",
      "-t",
      "8.100000",
      "-i",
      "/media/h.mp4",
    ],
    [
      "-vn",
      "-ss",
      "0.000000",
      "-t",
      "6.100000",
      "-i",
      "/media/v.mp4",
    ],
  ],
  "outLabel": "aout",
}
`;

exports[`buildAudioGraph > muted clips and clips without audio are left out 1`] = `
{
  "filterComplex": "[0:a:0]asetpts=PTS-STARTPTS,aresample=48000,aformat=sample_fmts=fltp:channel_layouts=stereo,atrim=duration=6,volume=4dB,afade=t=in:d=0.01:curve=qsin,afade=t=out:st=5.5:d=0.5:curve=qsin,adelay=0S:all=1[a0];
[a0]anull,apad=whole_dur=11.5[clips];
[clips]atrim=duration=11.5,alimiter=limit=0.891251:level=disabled:latency=1,afade=t=in:d=0.5,afade=t=out:st=11:d=0.5,aformat=sample_fmts=fltp:sample_rates=48000:channel_layouts=stereo[aout]",
  "inputs": [
    [
      "-vn",
      "-ss",
      "1.000000",
      "-t",
      "6.100000",
      "-i",
      "/media/h.mp4",
    ],
  ],
  "outLabel": "aout",
}
`;

exports[`buildAudioGraph > no audible clip: silence of the video duration, with music 1`] = `
{
  "filterComplex": "anullsrc=r=48000:cl=stereo,atrim=duration=11.5[clips];
[0:a:0]aresample=48000,aformat=sample_fmts=fltp:channel_layouts=stereo,atrim=duration=11.5,volume=0dB,afade=t=out:st=9.5:d=2[music];
[clips][music]amix=inputs=2:normalize=0:duration=first[mix];
[mix]atrim=duration=11.5,alimiter=limit=0.891251:level=disabled:latency=1,afade=t=in:d=0.5,afade=t=out:st=11:d=0.5,aformat=sample_fmts=fltp:sample_rates=48000:channel_layouts=stereo[aout]",
  "inputs": [
    [
      "-vn",
      "-i",
      "/media/m.mp3",
    ],
  ],
  "outLabel": "aout",
}
`;

exports[`buildAudioGraph > with looped music, global fades and the exact video duration 1`] = `
{
  "filterComplex": "[0:a:0]asetpts=PTS-STARTPTS,aresample=48000,aformat=sample_fmts=fltp:channel_layouts=stereo,atrim=duration=6,volume=4dB,afade=t=in:d=0.01:curve=qsin,afade=t=out:st=5.5:d=0.5:curve=qsin,adelay=0S:all=1[a0];
[1:a:0]asetpts=PTS-STARTPTS,channelmap=0|1|2|3,aresample=48000,aformat=sample_fmts=fltp:channel_layouts=stereo,atrim=duration=8,volume=-6dB,afade=t=in:d=0.01:curve=qsin,afade=t=out:st=7.5:d=0.5:curve=qsin,adelay=0S:all=1[a1];
[2:a:0]asetpts=PTS-STARTPTS,aresample=48000,aformat=sample_fmts=fltp:channel_layouts=stereo,atrim=duration=6,volume=11dB,afade=t=in:d=0.5:curve=qsin,afade=t=out:st=5.99:d=0.01:curve=qsin,adelay=264000S:all=1[a2];
[a0][a1][a2]amix=inputs=3:normalize=0:duration=longest,volume='0.707107+0.292893*clip((t-7.5)/0.5,0,1)':eval=frame,apad=whole_dur=11.516667[clips];
[3:a:0]aresample=48000,aformat=sample_fmts=fltp:channel_layouts=stereo,atrim=duration=11.516667,volume=-12dB,afade=t=out:st=9.516667:d=2[music];
[clips][music]amix=inputs=2:normalize=0:duration=first[mix];
[mix]atrim=duration=11.516667,alimiter=limit=0.891251:level=disabled:latency=1,afade=t=in:d=0.5,afade=t=out:st=11.016667:d=0.5,aformat=sample_fmts=fltp:sample_rates=48000:channel_layouts=stereo[aout]",
  "inputs": [
    [
      "-vn",
      "-ss",
      "1.000000",
      "-t",
      "6.100000",
      "-i",
      "/media/h.mp4",
    ],
    [
      "-vn",
      "-ss",
      "2.000000",
      "-t",
      "8.100000",
      "-i",
      "/media/h.mp4",
    ],
    [
      "-vn",
      "-ss",
      "0.000000",
      "-t",
      "6.100000",
      "-i",
      "/media/v.mp4",
    ],
    [
      "-stream_loop",
      "-1",
      "-vn",
      "-i",
      "/media/m.mp3",
    ],
  ],
  "outLabel": "aout",
}
`;

exports[`buildAudioGraph: sound overlays (T21) > mixed in after the compensation, before the limiter 1`] = `
{
  "filterComplex": "[0:a:0]asetpts=PTS-STARTPTS,aresample=48000,aformat=sample_fmts=fltp:channel_layouts=stereo,atrim=duration=6,volume=4dB,afade=t=in:d=0.01:curve=qsin,afade=t=out:st=5.5:d=0.5:curve=qsin,adelay=0S:all=1[a0];
[1:a:0]asetpts=PTS-STARTPTS,channelmap=0|1|2|3,aresample=48000,aformat=sample_fmts=fltp:channel_layouts=stereo,atrim=duration=8,volume=-6dB,afade=t=in:d=0.01:curve=qsin,afade=t=out:st=7.5:d=0.5:curve=qsin,adelay=0S:all=1[a1];
[2:a:0]asetpts=PTS-STARTPTS,aresample=48000,aformat=sample_fmts=fltp:channel_layouts=stereo,atrim=duration=6,volume=11dB,afade=t=in:d=0.5:curve=qsin,afade=t=out:st=5.99:d=0.01:curve=qsin,adelay=264000S:all=1[a2];
[a0][a1][a2]amix=inputs=3:normalize=0:duration=longest,volume='0.707107+0.292893*clip((t-7.5)/0.5,0,1)':eval=frame,apad=whole_dur=11.5[clips];
[3:a:0]asetpts=PTS-STARTPTS,aresample=48000,aformat=sample_fmts=fltp:channel_layouts=stereo,atrim=duration=1.5,volume=1dB,adelay=96000S:all=1[s3];
[clips][s3]amix=inputs=2:normalize=0:duration=first[withSounds];
[withSounds]atrim=duration=11.5,alimiter=limit=0.891251:level=disabled:latency=1,aformat=sample_fmts=fltp:sample_rates=48000:channel_layouts=stereo[aout]",
  "inputs": [
    [
      "-vn",
      "-ss",
      "1.000000",
      "-t",
      "6.100000",
      "-i",
      "/media/h.mp4",
    ],
    [
      "-vn",
      "-ss",
      "2.000000",
      "-t",
      "8.100000",
      "-i",
      "/media/h.mp4",
    ],
    [
      "-vn",
      "-ss",
      "0.000000",
      "-t",
      "6.100000",
      "-i",
      "/media/v.mp4",
    ],
    [
      "-vn",
      "-i",
      "/media/beep.wav",
    ],
  ],
  "outLabel": "aout",
}
`;
